# nthese

./: README.md  flake.nix
.github/workflows/: ci.yml  update-flake-lock.yml
nthese/: CHANGELOG.md  LICENSE  README.md  nthese.cabal
nthese/src/Data/: NThese.hs
