cabal-version: 3.0
name: nthese
version: 0.1.0.0
synopsis: A heterogeneous, n-ary generalisation of These
description:
  `NThese` is an n-ary generalisation of the `These` datatype,
  written in `sop-core` style.

license: BSD-3-Clause
license-file: LICENSE
author: Manuel Bärenz
maintainer: programming@manuelbaerenz.de
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with:
  ghc ==9.6
  ghc ==9.8
  ghc ==9.10
  ghc ==9.12

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: Data.NThese
  build-depends:
    base >=4.18 && <4.22,
    semialign ^>=1.3,
    sop-core ^>=0.5,
    these ^>=1.2,
    witherable ^>=0.5,

  hs-source-dirs: src
  default-language:
    GHC2021

  default-extensions:
    DataKinds
    LambdaCase
    TypeFamilies
